--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 # Core data processing and ML
-numpy>=1.21.0
-pandas>=1.3.0
-scikit-learn>=1.0.0
+numpy>=1.24.0
+pandas>=2.0.0
+scikit-learn>=1.3.0
 scipy>=1.7.0
 
 # Visualization
-matplotlib>=3.4.0
-seaborn>=0.11.0
-plotly>=5.3.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+streamlit>=1.32.0
+plotly>=5.18.0
 
 # Dimensionality reduction
 umap-learn>=0.5.0
