--- a/.gitignore
+++ b/.gitignore
@@ -1,84 +1,3 @@
-# Python virtual environment
-venv/
-env/
-.env/
-.venv/
-
-# Python cache files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# Distribution / packaging
-dist/
-build/
-*.egg-info/
-
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# Environment variables
-.env
-
-# Data files (if they contain sensitive information)
-data/raw/
-data/processed/
-
-# Logs
-*.log
-
-# OS specific files
-.DS_Store
-Thumbs.db
-
-# Python
-*.so
-.Python
-develop-eggs/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# Local development settings
-.env.local
-.env.*.local
-
-# Project specific
-notes.txt
-
-# Data directories
-data/raw/
-data/processed/
-
-# Generated directories
-models/
-reports/
-
 # Python
 __pycache__/
 *.py[cod]
@@ -103,6 +22,9 @@ wheels/
 
 # Virtual Environment
 venv/
+env/
+.env/
+.venv/
 ENV/
 
 # IDE
@@ -111,6 +33,35 @@ ENV/
 *.swp
 *.swo
 
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Data and Generated Content
+data/raw/*
+!data/raw/.gitkeep
+data/processed/*
+!data/processed/.gitkeep
+models/baseline/
+reports/model_evaluation/
+
+# Logs and Test Coverage
+*.log
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
 # OS
 .DS_Store
 .DS_Store?
@@ -118,4 +69,7 @@ ENV/
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db 
+Thumbs.db
+
+# Project specific
+notes.txt 
