Update gitignore to exclude models directory and remove model artifacts from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ data/raw/*
 !data/raw/.gitkeep
 data/processed/*
 !data/processed/.gitkeep
-models/baseline/
+models/
 reports/model_evaluation/
 
 # Logs and Test Coverage
